--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-spring/core": "^9.2.4",
     "@react-spring/three": "^9.2.4",
+    "@react-spring/web": "^9.2.4",
     "@react-three/drei": "^7.2.1",
     "@react-three/fiber": "^7.0.5",
     "@testing-library/jest-dom": "^5.11.4",
@@ -12,6 +14,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "styled-components": "^5.3.0",
     "three": "^0.128.0",
     "web-vitals": "^1.0.1"
   },
